--- a/_posts/2015-07-02-were-off.md
+++ b/_posts/2015-07-02-were-off.md
@@ -7,7 +7,7 @@ title: We're off!
 
 Hard to believe this trip has started! The last 48 hours were a whirlwind of errands and packing; it's surprisingly difficult to anticipate all your needs for a 3 month stay in a foreign country. I'm hopeful that I've remembered the important things. But for the stuff I missed, there's always [Flipkart](http://flipkart.com), the Amazon of India.
 
-Total flight time from San Antonio to Chennai is 22 hours (across 3 flights), and I just passed the 11 hour mark somewhere over Norway at 33,000 feet. Despite the fold out bed here in business class, it's been difficult to sleep...but then again it's not even 9PM back home (whereas it's 7AM in Chennai). The time difference is definitely starting to sink in.
+Total flight time from San Antonio to Chennai is 22 hours (across 3 flights), and I just passed the 11 hour mark somewhere over Finland at 33,000 feet. Despite the fold-out bed here in business class, it's been difficult to sleep...but then again it's not even 9PM back home (whereas it's 7AM in Chennai). The time difference is definitely starting to sink in.
 
 ![flight]({{ site.baseurl }}/images/flight.JPG)
 
